# screen_objects

./: .gitignore  Cargo.toml  screen_objects.pyi
src/: adb.rs  image_analyzer.rs  lib.rs  screen.rs
