[package]
name = "screen_objects"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "screen_objects"
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1   
lto = true
opt-level = 3


[dependencies]
image = "0.25.9"
pyo3 = "0.28.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
